# cpp_umsteiger

./: .gitignore  01_grundlagen.cpp  01_grundlagen_live.cpp  02_stl_grundlagen.cpp  03_stl_uebung.cpp  04_funktionen.cpp  05_vererbung.cpp  06_speicher_raii.cpp  06b_raii_uebung.cpp  07_smart_pointer.cpp  07b_smart_pointer_uebung.cpp  07b_smart_pointer_uebung_loesung.cpp  08_templates.cpp  09_exceptions.cpp  10_modern_cpp.cpp  11_multithreading.cpp  11b_qt_threading.cpp  12_tests_gtest.cpp  13_tests_qttest.cpp  CMakeLists.txt  README.md  backup_a_move.cpp  backup_b_spezialisierung.cpp  backup_c_sanitizers.cpp  backup_d_threading_traps.cpp
